--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /dotnet/microsoft graph/Update Printer/.vs
 /dotnet/microsoft graph/Update Printer/Update Printer/bin
 /dotnet/microsoft graph/Update Printer/Update Printer/obj
+/dotnet/webview2/WebView2 Dispose/.vs
+/dotnet/webview2/WebView2 Dispose/WebView2 Dispose/bin
+/dotnet/webview2/WebView2 Dispose/WebView2 Dispose/obj
